--- a/web/css/site.css
+++ b/web/css/site.css
@@ -42,35 +42,38 @@ a.desc:after {
   position: relative;
   top: 1px;
   display: inline-block;
-  font-family: "Glyphicons Halflings";
+  font-family: "FontAwesome";
   font-style: normal;
   font-weight: normal;
   line-height: 1;
   padding-left: 5px;
 }
 
+/* a.asc:after {
+  content:  "\e151";
+} */
 a.asc:after {
-  content: /*"\e113"*/ "\e151";
+  content: "\f160";
 }
 
 a.desc:after {
-  content: /*"\e114"*/ "\e152";
+  content: "\f161";
 }
 
 .sort-numerical a.asc:after {
-  content: "\e153";
+  content: "\f160";
 }
 
 .sort-numerical a.desc:after {
-  content: "\e154";
+  content: "\f161";
 }
 
 .sort-ordinal a.asc:after {
-  content: "\e155";
+  content: "\f160";
 }
 
 .sort-ordinal a.desc:after {
-  content: "\e156";
+  content: "\f161";
 }
 
 .grid-view th {
